--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"localized-strings": "^0.2.3",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
+		"react-gist": "^1.2.1",
 		"react-router-dom": "^5.0.1",
 		"react-scripts": "3.1.1",
 		"styled-components": "^4.3.2"
@@ -20,7 +21,15 @@
 		"extends": "react-app"
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	}
 }
