--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
 	"name": "my-react-portifolio",
 	"version": "0.1.0",
 	"private": true,
+	"engines": {
+		"node": "6.11.1",
+		"yarn": "0.27.5"
+	},
 	"dependencies": {
 		"localized-strings": "^0.2.3",
 		"react": "^16.9.0",
@@ -21,15 +25,7 @@
 		"extends": "react-app"
 	},
 	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+		"production": [ ">0.2%", "not dead", "not op_mini all" ],
+		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
 	}
 }
