--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-	"name": "my-react-portifolio",
+	"name": "sam-barros",
 	"version": "0.1.0",
 	"private": true,
 	"engines": {
 		"node": "11.15.0",
-		"yarn": "1.13.0"
+		"yarn": "1.19.2"
 	},
 	"dependencies": {
 		"localized-strings": "^0.2.3",
