--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react-gist": "^1.2.1",
 		"react-router-dom": "^5.0.1",
 		"react-scripts": "3.1.1",
+		"serialize-javascript": "^3.0.0",
 		"styled-components": "^4.3.2"
 	},
 	"scripts": {
@@ -25,7 +26,15 @@
 		"extends": "react-app"
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	}
 }
